<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                android:background="#c1deb4"
                tools:context=".MainActivity">
    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/nanodegree"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="#94cd4b"
        android:id="@+id/nanodegree"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_one"
        android:textColor="#ffffff"
        android:text="@string/spotify"
        android:id="@+id/spotify"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_two"
        android:textColor="#ffffff"
        android:text="@string/scores"
        android:id="@+id/scores"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_one"
        android:textColor="#ffffff"
        android:text="@string/library"
        android:id="@+id/library"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_two"
        android:textColor="#ffffff"
        android:text="@string/bigger"
        android:id="@+id/bigger"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/reader"
        android:layout_gravity="center"
        android:padding="10dp"
        android:background="@drawable/rounded_one"
        android:textColor="#ffffff"
        android:layout_margin="10dp"
        android:id="@+id/reader"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/rounded"
        android:textColor="#94cd4b"
        android:text="@string/myapp"
        android:id="@+id/myapp"/>

</LinearLayout>
